fixed horizontal scrollbar from navbar styling

--- a/css/index.css
+++ b/css/index.css
@@ -161,6 +161,7 @@ header nav {
   justify-content: space-between;
   align-items: center;
   width: 400px;
+  max-width: 100vw;
 }
 header nav a {
   font-size: 1.6rem;
