--- a/less/navigation.less
+++ b/less/navigation.less
@@ -28,6 +28,7 @@ header {
     justify-content: space-between;
     align-items: center;
     width: 400px;
+    max-width: 100vw;
 
     a {
       font-size: 1.6rem;
